# hybrid-vocal-classifier

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  travis.yml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  Makefile  api_ref.rst  citations.rst  conf.py  config_yaml_spec.md  config_yaml_spec.rst  development.rst  extract_yaml_spec.md  general_ref.rst  index.rst  install.rst  intro_notes.md  intro_notes.rst  links.rst  make.bat  more_about.rst  named_features.md  named_features.rst  reference.rst  references.rst  related.rst  repos.rst  rtd-pip-requirements.txt  tutorial.rst
docs/api_ref/: modules.rst
docs/dev/: config_yaml_spec.rst  extract_yaml_spec.rst  parse_extract.rst  predict_yaml_spec.rst  roadmap.rst  select_yaml_spec.rst
docs/general_ref/: knn.rst  models.rst
docs/images/: gr41rd41_song.pptx
docs/source/: CHANGELOG.md  citations.rst  code-of-conduct.rst  conf.py  index.rst  install.rst
docs/tutorial/: annotation.rst  autocompare-workflow.rst  autocompare.rst  autolabel-workflow.rst  autolabel.py  autolabel_knn.rst  configuring.rst  faqs.rst  gy6or6_autolabel.example.extract.svm.config.yml  gy6or6_autolabel.example.predict.knn.config.yml  workflows.rst  writing_extract_yaml.rst
feature_groups/: svm.yml
hvc/: Python.ipynb  __init__.py  audio.py  audiofileIO.py  classify.py  classify_neuralnet.py  convert.py  evfuncs.py  extract.py  extract_features.py  featureextract.py  features.py  features_old.py  finch_helper_funcs.py  generate_summary.py  hybrid-deep-finch.ipynb  koumura.py  labelpredict.py  metrics.py  models.py  modelselect.py  parseconfig.py  predict.py  randomdotorg.py  select.py  sequences.py  test_svmrbf_knn.py  train.py  train2.py  utils.py
hvc/audio/: ev_funcs.py  load.py
hvc/docs/: docs.md
hvc/features/: __init__.py  extract.py  feature_dict.py  knn.py  neuralnet.py  tachibana.py
hvc/matlab/: bandpass_filtfilt.m  classify_deepfinch.m  compute_amps.m  concat_knn_ftrs.m  concat_svm_ftrs.m  evread_labv_file.m  evsmooth.m  fn2datenum.m  makeAllFeatures.m  make_HDFnotmat.m  make_feature_files_for_knn.m  make_feature_files_for_svm.m  make_notmat.m  make_spect_files.m  readrecf.m  spect_from_rawsyl.m  train_deepfinch.asv  train_deepfinch.m  uipickfiles.m
hvc/neuralnet/: __init__.py  (+4 more)
scripts/: example.config.yml  example.extract.config.yml  example.predict.config.yml  example.select.config.yml  example2.extract.config.yml  test_extract.config.yml
test_scripts/: test_DCNN2_song_spects.py  test_DCNN_song_spects.py  test_naive_LSTM.py  test_resequencer.py  visualize_filters.py
tests/: conftest.py  pytest.ini  test_annotation.py  test_audio.py  test_audiofileIO.py  test_evfuncs.py  test_extract.py  test_featureextract.py  test_features.py  test_knn.py  test_main_workflow.py  test_modelselect.py  test_neuralnet.py  test_parse.py  test_tachibana.py  test_utils.py
(+1525 files in other folders)
