[project]
name = "hybrid-vocal-classifier"
description = "a Python machine learning library for animal vocalizations and bioacoustics"
authors = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"},
]
version = "0.3.1"
license = {file = "LICENSE"}
requires-python = ">=3.7,<3.10"
dependencies = [
    "evfuncs>=0.3.2",
    "numpy>=1.19.2",
    "scipy>=1.6.2",
    "matplotlib>=3.4.1",
    "scikit-learn>=0.24.1",
    "Keras>=2.4.3",
    "tensorflow>=2.4.1",
    "PyYAML>=5.4.1",
    "joblib>=1.0.1",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython"
]
readme = "README.md"

[project.urls]
Source = "https://github.com/NickleDave/hybrid-vocal-classifier"
Documentation = "https://hybrid-vocal-classifier.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = [
    "Sphinx>=3.5.3",
    "numpydoc>=1.1.0",
]
test = [
    "pytest>=6.2.3",
    "pytest-cov>=2.11.1",
    "coverage[toml]>=5.5",
]
dev = [
    "ipython>=7.22.0",
    "black>=20.8b1",
    "flit>=3.2"
]

[tool.flit.module]
name = "hvc"

[tool.flit.sdist]
exclude = [
    "tests/data_for_tests/cbins",
    "tests/data_for_tests/koumura",
    "tests/data_for_tests/wav"
]

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
